--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <changelist>-SNAPSHOT</changelist>
 
         <!-- Dependency Versions -->
+        <flatten-maven.version>1.2.7</flatten-maven.version>
         <maven-compiler.version>3.8.1</maven-compiler.version>
         <maven-enforcer.version>3.0.0</maven-enforcer.version>
         <maven-resources.version>3.2.0</maven-resources.version>
@@ -66,6 +67,26 @@
                 <configuration>
                     <encoding>UTF-8</encoding>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>flatten-maven-plugin</artifactId>
+                <version>${flatten-maven.version}</version>
+                <configuration>
+                    <outputDirectory>${project.build.directory}</outputDirectory>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>flatten</id>
+                        <phase>process-resources</phase>
+                        <goals> <goal>flatten</goal> </goals>
+                    </execution>
+                    <execution>
+                        <id>flatten.clean</id>
+                        <phase>clean</phase>
+                        <goals> <goal>clean</goal> </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
