--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <maven-compiler.version>3.8.1</maven-compiler.version>
         <maven-enforcer.version>3.0.0</maven-enforcer.version>
         <maven-resources.version>3.2.0</maven-resources.version>
+        <maven-surefire.version>3.0.0-M5</maven-surefire.version>
     </properties>
 
     <build>
@@ -67,6 +68,11 @@
                 <configuration>
                     <encoding>UTF-8</encoding>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire.version}</version>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
