--- a/pom.xml
+++ b/pom.xml
@@ -38,16 +38,26 @@
 
     <properties>
         <!-- Maven Properties -->
-        <revision>0.0.1</revision>
+        <revision>0.1.0</revision>
         <changelist>-SNAPSHOT</changelist>
 
         <!-- Dependency Versions -->
         <flatten-maven.version>1.2.7</flatten-maven.version>
+        <junit5.version>5.8.2</junit5.version>
         <maven-compiler.version>3.8.1</maven-compiler.version>
         <maven-enforcer.version>3.0.0</maven-enforcer.version>
         <maven-resources.version>3.2.0</maven-resources.version>
         <maven-surefire.version>3.0.0-M5</maven-surefire.version>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${junit5.version}</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
