--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
 
         <!-- Dependency Versions -->
         <flatten-maven.version>1.2.7</flatten-maven.version>
+        <jacoco.version>0.8.7</jacoco.version>
         <junit5.version>5.8.2</junit5.version>
         <maven-compiler.version>3.8.1</maven-compiler.version>
         <maven-enforcer.version>3.0.0</maven-enforcer.version>
@@ -55,7 +56,7 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
             <version>${junit5.version}</version>
-            <scope>compile</scope>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
@@ -122,6 +123,39 @@
                         <id>flatten.clean</id>
                         <phase>clean</phase>
                         <goals> <goal>clean</goal> </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${jacoco.version}</version>
+                <executions>
+                    <execution>
+                        <goals> <goal>prepare-agent</goal> </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>prepare-package</phase>
+                        <goals> <goal>report</goal> </goals>
+                    </execution>
+                    <execution>
+                        <id>jacoco-check</id>
+                        <goals> <goal>check</goal> </goals>
+                        <configuration>
+                            <rules>
+                                <rule>
+                                    <element>PACKAGE</element>
+                                    <limits>
+                                        <limit>
+                                            <counter>LINE</counter>
+                                            <value>COVEREDRATIO</value>
+                                            <minimum>0.95</minimum>
+                                        </limit>
+                                    </limits>
+                                </rule>
+                            </rules>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
